[package]
name = "breaker"
version = "0.1.0"
edition = "2021"
description = "a new live coding language"
authors = ["Miel Peeters"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"
hound = "3.5.1"

[dependencies]
tree-sitter-breaker = { version = "0.1.1", path = "../tree-sitter-breaker" }
tree-sitter = "0.20"
clap = { version = "4.4", features = ["derive"] }
cpal = { version = "0.15.2", features = ["jack"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
notify = "6.1.1"
rand = "0.8.5"
hound = "3.5.1"
dasp_sample = "0.11.0"
log = "0.4"
env_logger = "0.11"
