[package]
name = "breakers"
version = "0.1.1"
edition = "2021"
description = "Interpreter for the Breaker livecoding language"
authors = ["Miel Peeters"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mielpeeters/breaker"
readme = "README.md"
keywords = ["livecoding", "music", "audio", "synth", "interpreter"]
categories = ["multimedia::audio", "compilers"]
exclude = ["data/"]

[build-dependencies]
cc = "1.0.83"
hound = "3.5.1"

[dependencies]
tree-sitter-breaker = { version = "0.2", path = "../tree-sitter-breaker" }
tree-sitter = "0.20"
clap = { version = "4.4", features = ["derive"] }
cpal = { version = "0.15.2", features = ["jack"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
notify = "6.1.1"
rand = "0.8.5"
hound = "3.5.1"
dasp_sample = "0.11.0"
log = "0.4"
env_logger = "0.11"
